--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,37 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+
+body {
+  overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.bg-stripes {
+  background: repeating-linear-gradient(
+    45deg,       
+    #FFD700,     
+    #FFD700 10px,
+    #000000 20px,
+    #000000 40px
+  );
+  z-index: -1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+div[name="footerShadow"]{
+  border-radius: 50px;
+  background: #202123;
+  box-shadow:  20px 20px 52px #151617,
+               -20px -20px 52px #2b2c2f;
+               
+width:272px;
+height:329px;
+position:relative;
+top:-230px;
+z-index: 1;
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+margin-left:13px;
+margin-right:59px;
+margin-top:-36px;
 }
