enuff for tonight

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 body {
   overflow: hidden;
+  
 }
 
 
@@ -21,6 +22,10 @@ body {
     #000000 40px
   );
   z-index: -1;
+}
+
+div[name="Pads"]{
+  top: 1100px;
 }
 
 div[name="footerShadow"]{
@@ -38,4 +43,84 @@ z-index: 1;
 margin-left:13px;
 margin-right:59px;
 margin-top:-36px;
+}
+
+#gnome {
+  border-radius: 0px;
+  background: #000000;
+  box-shadow: inset 8px 8px 13px #161718,
+  inset -8px -8px 13px #222526;
+
+}
+
+#mushroom {
+  border-radius: 14px;
+  background: #b8b7b7;
+  box-shadow: inset 9px 9px 28px #abaaaa,
+              inset -9px -9px 28px #c5c4c4;
+}
+
+
+/*---------------------------------------------------
+Hitchcock
+-----------------------------------------------------
+*/
+.hitchcock-container * {
+  box-sizing: border-box;
+  position: relative;
+}
+
+.hitchcock-container .box {
+  position: absolute;
+  perspective: 400px;
+  width: 1150px;
+  height: 878.75px;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  transition: perspective 5s;
+}
+
+.hitchcock-container .fore-box {
+  z-index: 10;
+}
+
+.hitchcock-container .bg-box {
+  z-index: 5;
+}
+
+.hitchcock-container .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1150px;
+  height: 878.75px;
+  transition: all 5s;
+}
+
+.hitchcock-container .fore {
+  z-index: 10;
+  background-image: url('./assets/contractorFG.png');
+  background-size: cover;
+}
+
+.hitchcock-container .bg {
+  background-image: url('./assets/cTapeBD.png');
+  transform: translateZ(150px);
+  background-size: cover;
+}
+
+.hitchcock-container .box.on .fore {
+  transform: translateZ(200px);
+}
+
+.hitchcock-container .box.on .bg {
+  transform: translateZ(0);
+  filter: blur(4px);
+  -webkit-filter: blur(4px);
+}
+
+.hitchcock-container .ui {
+  position: relative;
+  top: 10px;
+  left: 10px;
 }
